--- a/Edurem/Views/Group/GroupPosts.cshtml
+++ b/Edurem/Views/Group/GroupPosts.cshtml
@@ -17,7 +17,7 @@
         </div>
     </div>
 }
-<div class="row">
+<div class="row mt-5">
     <div class="col-7">
         <component>@(await Html.RenderComponentAsync<Edurem.Components.PostsList>(RenderMode.ServerPrerendered, new { GroupId = Model.ViewModel.Id }))</component>
     </div>
